--- a/config
+++ b/config
@@ -314,7 +314,7 @@ CONFIG_BCM2708_GPIO=y
 CONFIG_BCM2708_VCMEM=y
 # CONFIG_BCM2708_NOL2CACHE is not set
 CONFIG_BCM2708_SPIDEV=y
-# CONFIG_BCM2708_DMAER is not set
+CONFIG_BCM2708_DMAER=m
 
 #
 # Processor Type
@@ -408,7 +408,7 @@ CONFIG_ATAGS=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
+CONFIG_CMDLINE="dwc_otg.lpm_enable=0 console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
@@ -922,7 +922,7 @@ CONFIG_NET_EMATCH_NBYTE=m
 CONFIG_NET_EMATCH_U32=m
 CONFIG_NET_EMATCH_META=m
 CONFIG_NET_EMATCH_TEXT=m
-# CONFIG_NET_EMATCH_CANID is not set
+CONFIG_NET_EMATCH_CANID=m
 CONFIG_NET_EMATCH_IPSET=m
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=m
@@ -979,7 +979,7 @@ CONFIG_YAM=m
 CONFIG_CAN=m
 CONFIG_CAN_RAW=m
 CONFIG_CAN_BCM=m
-# CONFIG_CAN_GW is not set
+CONFIG_CAN_GW=m
 
 #
 # CAN Device Drivers
@@ -1806,7 +1806,7 @@ CONFIG_SPI_BCM2708=m
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=y
+CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 
 #
@@ -1856,7 +1856,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
-# CONFIG_GPIO_STMPE is not set
+CONFIG_GPIO_STMPE=y
 # CONFIG_GPIO_ADP5588 is not set
 
 #
@@ -1914,7 +1914,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
 # CONFIG_TEST_POWER is not set
-CONFIG_BATTERY_DS2760=m
+# CONFIG_BATTERY_DS2760 is not set
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
@@ -2021,7 +2021,7 @@ CONFIG_MFD_STMPE=y
 #
 # STMicroelectronics STMPE Interface Drivers
 #
-# CONFIG_STMPE_I2C is not set
+CONFIG_STMPE_I2C=y
 CONFIG_STMPE_SPI=y
 # CONFIG_MFD_SYSCON is not set
 # CONFIG_MFD_TI_AM335X_TSCADC is not set
@@ -2704,7 +2704,7 @@ CONFIG_HID_KENSINGTON=m
 CONFIG_HID_LCPOWER=m
 # CONFIG_HID_LENOVO_TPKBD is not set
 CONFIG_HID_LOGITECH=m
-# CONFIG_HID_LOGITECH_DJ is not set
+CONFIG_HID_LOGITECH_DJ=m
 # CONFIG_LOGITECH_FF is not set
 # CONFIG_LOGIRUMBLEPAD2_FF is not set
 # CONFIG_LOGIG940_FF is not set
