--- a/config
+++ b/config
@@ -3765,3 +3765,7 @@ CONFIG_AVERAGE=y
 # CONFIG_DDR is not set
 CONFIG_OID_REGISTRY=y
 # CONFIG_VIRTUALIZATION is not set
+CONFIG_NEED_MACH_GPIO_H=y
+CONFIG_BLK_DEV_DM_BUILTIN=y
+CONFIG_SND_BCM2708_SOC_HIFIBERRY_DIGI=m
+CONFIG_SND_SOC_WM8804=m
